# slack-message-docker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: release.yml  test.yml
src/: main.rs
