[package]
name = "slack-message"
version = "0.1.0"
edition = "2021"
authors = ["Tim Preece","The rusty-apps developers"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/rusty-apps/slack-message"
description = """
Simple slack messaging utility via webhook.
"""
keywords = ["slack", "message", "webhook"]
categories = ["utilities", "messaging"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Makes artifactory the default registry and saves passing --registry parameter
[registry]
default = "artifactory"

[registries.artifactory]
# index = "https://artprod.mycompany/artifactory/git/rustyapps-cargo-local.git"
index = "https://rustyapps.jfrog.io/artifactory/rustyapps-cargo-local"

# For sending credentials in git requests.
# Not required if anonymous access is enabled
[net]
git-fetch-with-cli = true

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.3"
